syntax = "proto3";

package ssh;

option go_package="github.com/costinm/istiod/ssh";

// Certificate request message.
message SSHCertificateRequest {
  // Public key to sign
  string public = 1;

  // hostname to sign
  string hostname = 2;
  string user = 3;

  // Optional: requested certificate validity period, in seconds.
  int64 validity_duration = 4;
}

// Certificate response message.
message SSHCertificateResponse {
  string host = 1;
  string user = 2;
  string root = 3;
}

// Service for managing certificates issued by the CA.
service SSHCertificateService {
  rpc CreateCertificate(SSHCertificateRequest) returns (SSHCertificateResponse) {
  }
}
